--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="fh">Connecting World.</h1>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
-          <img src="images/sky.png" alt="skyline" height="100%" width="100%">
+          <img src="sky.png" alt="skyline" height="100%" width="100%">
         </div>
         <!-- <button type="button">Download</button>
       <button type="button">Download</button> -->
