--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img src="images/air.png" height="32px" width="32px">
+      <img src="air.png" height="32px" width="32px">
       <a class="navbar-brand" href="">Falcon Air</a>
 
       <ul class="navbar-nav ml-auto">
