--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Log In <img src="images/login.png" height="16px" width="16px" alt="login"></a>
+            <a class="nav-link" href="">Log In <img src="login.png" height="16px" width="16px" alt="login"></a>
           </li>
       </ul>
       </div>
