--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
       </div>
       <br>
-      <div class="row">
+      <!--<div class="row">-->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="hovereffect">
             <a href=""><img src="https://www.traveldailymedia.com/assets/2019/12/moscow-cathedral.jpg" height="100%" width="100%"></a>
@@ -228,7 +228,7 @@
             </div>
           </div>
         </div>
-      </div>
+      <!--</div>-->
 
 
       <!-- </div>
