--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-      </div>
+     <!-- </div>-->
       <br>
       <!--<div class="row">-->
         <div class="col-lg-3 col-md-4 col-sm-6">
