--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <title>Falcon Air</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link type="text/css" rel="stylesheet" href="styles.css" />
-<!--   <..!<link rel="stylesheet" href="styles.css">.. -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="icon" href="favicon Light.ico">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
 
@@ -33,16 +33,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <li class="nav-item">
-            <a class="nav-link" href="">Destinations</a>
+            <a class="nav-link" href=""><i class="fas fa-plane"></i> Destinations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Cargo</a>
+            <a class="nav-link" href=""><i class="fas fa-box"></i> Cargo</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Log In <img src="login.png" height="16px" width="16px" alt="login"></a>
+            <a class="nav-link" href=""><i class="fas fa-user-alt"></i> Log In</a>
           </li>
       </ul>
       </div>
@@ -176,9 +174,8 @@
             </div>
           </div>
         </div>
-     <!-- </div>-->
+
       <br>
-      <!--<div class="row">-->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="hovereffect">
             <a href=""><img src="https://www.traveldailymedia.com/assets/2019/12/moscow-cathedral.jpg" height="100%" width="100%"></a>
@@ -228,7 +225,7 @@
             </div>
           </div>
         </div>
-      <!--</div>-->
+      </div>
 
 
       <!-- </div>
