--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href=""><i class="fas fa-user-alt"></i> Log In</a>
+            <a class="nav-link" href="airport.html"><i class="far fa-compass"></i> Airport</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="login.html"><i class="fas fa-user-alt"></i> Log In</a>
           </li>
       </ul>
       </div>
