--- a/shopping.html
+++ b/shopping.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
-  <link type="text/css" rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -52,12 +52,16 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2">
-          <img src="https://pbs.twimg.com/profile_images/1278689345625522182/JVvqG6p2.png">
-        </div>
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <h1 class="fh">Home of Falcon Air</h1>
-        </div>
+      
+          <div class="col-lg-2 col-md-12 col-sm-12">
+            <img src="IAD.png" alt="IAD-logo" height="100%" width="100%">
+          </div>
+          <div class="col-lg-2 col-md-12 col-sm-12">
+            <img src=>
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <h1 class="fh">Home of Falcon Air</h1>
+          </div>
 
 
 
