--- a/cargo.html
+++ b/cargo.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cargo</title>
-  </head>
-  <body>
-    <h1>COMING SOON</h1>
-  </body>
-</html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Falcon Air</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="icon" href="favicon Light.ico">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+</head>
+
+<body>
+  <section id="page">
+
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <img src="light logo.png" height="40px" width="40px">
+      <a class="navbar-brand" href="index.html">Falcon Air</a>
+
+      <ul class="navbar-nav ml-auto">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <li class="nav-item">
+            <a class="nav-link" href="dest.html"><i class="fas fa-globe-americas"></i> Destinations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cargo.html"><i class="fas fa-box"></i> Cargo</a>
+          </li>
+
+          <li class="nav-item"></li>
+          <a class="nav-link" href="fleet.html"><i class="fas fa-plane"></i> Fleet
+          </a>
+          <li class="nav-item">
+            <a class="nav-link" href="airport.html"><i class="far fa-compass"></i> Airport</a>
+          </li>
+
+
+      </ul>
+      </div>
+    </nav>
+    <!-- Title -->
+    <div class="container-fluid">
+
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <h1 class="fh"><b>Connecting World.</b></h1>
+          <h3 class="fh">From Washington to 7 Continents</h3>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <img src="sky.png" alt="skyline" height="100%" width="100%">
+        </div>
+
+      </div>
+
+
+
+      <hr class="rounded">
